syntax = 'proto3';

message ScanCommand {
    uint32 scan_time = 1;
}

message ChannelConfig {
    uint32 channel_id = 1;
    uint32 device_type = 2;
    uint32 transmission_type = 3;
}

message AssignCommand {
    repeated ChannelConfig config = 1;
}

message RequestStatusCommand {
}

message IdentifyCommand {
}

message SetCountRateCommand {
}

message Command {
    oneof type {
        ScanCommand scan = 1;
        AssignCommand assign = 2;
        RequestStatusCommand request = 3;
        IdentifyCommand identify = 4;
        SetCountRateCommand count_rate = 5;
    }
}

message SystemStatus {
}

message SensorCountStatus {
}

message SystemFaultStatus {
}

message SystemBootStatus {
}

// Set in mqtt for event of unintended disconenct
message TombStoneStatus {
}

message Status {
    oneof type {
        SystemStatus system = 1;
        SensorCountStatus count = 2;
        SystemFaultStatus fault = 3;
        SystemBootStatus boot = 4;
        TombStoneStatus tomb = 5;
    }
}
